log.txt
/home/pi/node/server.js:68
    else {var uname="none")
                          ^

SyntaxError: Unexpected token ')'
    at Module._compile (internal/modules/cjs/loader.js:895:18)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:995:10)
    at Module.load (internal/modules/cjs/loader.js:815:32)
    at Function.Module._load (internal/modules/cjs/loader.js:727:14)
    at Function.Module.runMain (internal/modules/cjs/loader.js:1047:10)
    at internal/main/run_main_module.js:17:11
   at trim_prefix (/home/pi/node/node_modules/express/lib/router/index.js:317:13)
    at /home/pi/node/node_modules/express/lib/router/index.js:284:7
    at Function.process_params (/home/pi/node/node_modules/express/lib/router/index.js:335:12)
    at next (/home/pi/node/node_modules/express/lib/router/index.js:275:10)
    at /home/pi/node/server.js:28:107
    at Layer.handle [as handle_request] (/home/pi/node/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/home/pi/node/node_modules/express/lib/router/index.js:317:13)
    at /home/pi/node/node_modules/express/lib/router/index.js:284:7
2601:282:501:7489:1319:5226:4766:cdfd
cookie exists hi
Sent index
2601:282:501:7489:1319:5226:4766:cdfd
TypeError: Cannot read property 'username' of undefined
    at /home/pi/node/server.js:65:24
    at Layer.handle [as handle_request] (/home/pi/node/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/home/pi/node/node_modules/express/lib/router/index.js:317:13)
    at /home/pi/node/node_modules/express/lib/router/index.js:284:7
    at Function.process_params (/home/pi/node/node_modules/express/lib/router/index.js:335:12)
    at next (/home/pi/node/node_modules/express/lib/router/index.js:275:10)
    at /home/pi/node/server.js:28:107
    at Layer.handle [as handle_request] (/home/pi/node/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/home/pi/node/node_modules/express/lib/router/index.js:317:13)
    at /home/pi/node/node_modules/express/lib/router/index.js:284:7
::ffff:50.203.38.105
TypeError: Cannot read property 'username' of undefined
    at /home/pi/node/server.js:65:24
    at Layer.handle [as handle_request] (/home/pi/node/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/home/pi/node/node_modules/express/lib/router/index.js:317:13)
    at /home/pi/node/node_modules/express/lib/router/index.js:284:7
    at Function.process_params (/home/pi/node/node_modules/express/lib/router/index.js:335:12)
    at next (/home/pi/node/node_modules/express/lib/router/index.js:275:10)
    at /home/pi/node/server.js:28:107
    at Layer.handle [as handle_request] (/home/pi/node/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/home/pi/node/node_modules/express/lib/router/index.js:317:13)
    at /home/pi/node/node_modules/express/lib/router/index.js:284:7
/server.js:58:28
    at Layer.handle [as handle_request] (/home/pi/node/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/home/pi/node/node_modules/express/lib/router/index.js:317:13)
    at /home/pi/node/node_modules/express/lib/router/index.js:284:7
    at Function.process_params (/home/pi/node/node_modules/express/lib/router/index.js:335:12)
    at next (/home/pi/node/node_modules/express/lib/router/index.js:275:10)
    at /home/pi/node/server.js:25:107
    at Layer.handle [as handle_request] (/home/pi/node/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/home/pi/node/node_modules/express/lib/router/index.js:317:13)
    at /home/pi/node/node_modules/express/lib/router/index.js:284:7
::ffff:159.203.112.133
TypeError: Cannot read property 'uname' of undefined
    at /home/pi/node/server.js:58:28
    at Layer.handle [as handle_request] (/home/pi/node/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/home/pi/node/node_modules/express/lib/router/index.js:317:13)
    at /home/pi/node/node_modules/express/lib/router/index.js:284:7
    at Function.process_params (/home/pi/node/node_modules/express/lib/router/index.js:335:12)
    at next (/home/pi/node/node_modules/express/lib/router/index.js:275:10)
    at /home/pi/node/server.js:25:107
    at Layer.handle [as handle_request] (/home/pi/node/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/home/pi/node/node_modules/express/lib/router/index.js:317:13)
    at /home/pi/node/node_modules/express/lib/router/index.js:284:7
::ffff:94.102.56.151
TypeError: Cannot read property 'uname' of undefined
    at /home/pi/node/server.js:58:28
    at Layer.handle [as handle_request] (/home/pi/node/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/home/pi/node/node_modules/express/lib/router/index.js:317:13)
    at /home/pi/node/node_modules/express/lib/router/index.js:284:7
    at Function.process_params (/home/pi/node/node_modules/express/lib/router/index.js:335:12)
    at next (/home/pi/node/node_modules/express/lib/router/index.js:275:10)
    at /home/pi/node/server.js:25:107
    at Layer.handle [as handle_request] (/home/pi/node/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/home/pi/node/node_modules/express/lib/router/index.js:317:13)
    at /home/pi/node/node_modules/express/lib/router/index.js:284:7
::ffff:50.203.38.105
TypeError: Cannot read property 'uname' of undefined
    at /home/pi/node/server.js:58:28
    at Layer.handle [as handle_request] (/home/pi/node/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/home/pi/node/node_modules/express/lib/router/index.js:317:13)
    at /home/pi/node/node_modules/express/lib/router/index.js:284:7
    at Function.process_params (/home/pi/node/node_modules/express/lib/router/index.js:335:12)
    at next (/home/pi/node/node_modules/express/lib/router/index.js:275:10)
    at /home/pi/node/server.js:25:107
    at Layer.handle [as handle_request] (/home/pi/node/node_modules/express/lib/router/layer.js:95:5)
    at trim_prefix (/home/pi/node/node_modules/express/lib/router/index.js:317:13)
    at /home/pi/node/node_modules/express/lib/router/index.js:284:7
